dropdown alignment issue fixed

--- a/app/assets/stylesheets/admin/partials/login.scss
+++ b/app/assets/stylesheets/admin/partials/login.scss
@@ -1,4 +1,5 @@
 .header-holder {
+padding: 40px 0;
   &.accountpage {
     padding: 20px 15px 25px;
     & .logo {
